<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="checkbox_on">The checkbox is on</string>
    <string name="checkbox_off">The checkbox is off</string>
    <string name="switch_on">The switch is on</string>
    <string name="switch_off">The switch is off</string>
    <string name="undo">Undo</string>
    <string name="GUI">Look at my GUI</string>
    <string name="button">Click here</string>
    <string name="checkbox">Check this out!</string>
    <string name="switch_bar">Switch on / off</string>
    <string name="hint">Type here</string>
    <string name="email_text_login">Enter your email address:</string>
    <string name="email_hint_login">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="btn_login">LOGIN</string>
    <string name="user_profile">Your profile</string>
    <string name="name_profile">Your name:</string>
    <string name="user_name">Enter your name</string>
    <string name="email_text_profile">Your email:</string>
    <string name="email_hint_profile">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="btn_text_profile">Click the button above to take a picture</string>
    <string name="btn_toChatRoom">Go to chat</string>
    <string name="btn_send_message">send</string>
    <string name="edit_message">type here</string>
    <string name="btn_receive_message">receive</string>
    <string name="go_to_weatherforecast">go to weatherForecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_here">Message Here</string>
    <string name="message_id">ID=</string>
    <string name="is_a_send_message">is a Send Message</string>
    <string name="btn_hide">HIDE</string>
</resources>