<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_message_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message_here"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"/>
    
    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message_id"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/text_message_here"/>

    <CheckBox
        android:id="@+id/checkbox_isSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_a_send_message"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/text_id"/>

    <Button
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_hide"/>

</RelativeLayout>